# Mapping_Urban_Land_Utilization

./: .gitignore  Dockerfile.backend  Dockerfile.db  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_backend.sh  run_frontend.sh  writeup.md
alembic/: env.py
alembic/versions/: 10a3b712bdeb_walkable_edges_row_can_be_found_from_.py  2aa19f7f077d_create_walkable_edges.py  32113172727b_primary_key_on_u_v_key_rather_than_id_.py  47194fa60d2b_add_id_to_walkableedge_for_pgrouting.py  6982a2c7bde3_primary_key_to_id_on_walkable_edges.py  6adf0a590f6e_create_locations_and_places_table.py  7c65dfdcafcc_add_pgrouting_extension_routable_edge_.py  9e7b039b01c9_add_unique_constraint_to_places.py  bc0843c859c4_rename_walkable_edges_geometry_to_geom.py
backend/: config.py  isochrone_helpers.py  main.py  populate_db.py  pydantic_models.py  pyproject.toml
backend/models/: locations.py  tables.py  views.py  views_utils.py
backend/src/: Dockerfile  __init__.py  config.py  isochrone_helpers.py  main.py  populate_db.py  pydantic_models.py
backend/src/models/: __init__.py  tables.py  views.py
data_normalization/: location_geojsons.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  MapView.tsx  Sidebar.tsx  index.css  main.tsx
