[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Backend for Mapping Urban Land Utilization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "geoalchemy>=0.7.2",
    "geoalchemy2>=0.17.1",
    "orjson>=3.10.18",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "pylint>=3.3.6",
    "shapely>=2.1.0",
    "sqlalchemy>=2.0.38",
    "sqlalchemy-utils>=0.41.2",
    "structlog>=25.2.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
normalize-data = [
    "fiona>=1.10.1",
    "geopandas>=1.0.1",
    "marimo>=0.12.10",
    "matplotlib>=3.10.1",
    "osmnx>=2.0.2",
    "pandas>=2.2.3",
    "shapely>=2.1.0",
]
