[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Backend for Mapping Urban Land Utilization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "geoalchemy>=0.7.2",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]
