[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Backend for Mapping Urban Land Utilization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "fastapi>=0.115.11",
    "geoalchemy>=0.7.2",
    "geoalchemy2>=0.17.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.38",
    "sqlalchemy-utils>=0.41.2",
    "structlog>=25.2.0",
    "uvicorn>=0.34.0",
]
